added support for 3 part JVMCI version